Added random color and role when the game starts

--- a/SecretHitlerPlugin/SecretHitlerPlugin.csproj
+++ b/SecretHitlerPlugin/SecretHitlerPlugin.csproj
@@ -47,12 +47,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Player.cs" />
-    <Compile Include="PlayerColor.cs" />
-    <Compile Include="PlayerManager.cs" />
-    <Compile Include="PlayerRole.cs" />
+    <Compile Include="Helpers\GameSetup.cs" />
+    <Compile Include="Models\GameState.cs" />
+    <Compile Include="Managers\GameManager.cs" />
+    <Compile Include="Models\Player.cs" />
+    <Compile Include="Statics\PlayerColor.cs" />
+    <Compile Include="Managers\PlayerManager.cs" />
+    <Compile Include="Statics\PlayerRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tags.cs" />
+    <Compile Include="Statics\Tags.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
